# dissect.cobaltstrike

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: dissect-ci.yml  package.yml  tests.yml
dissect/cobaltstrike/: artifact.py  beacon.py  c2.py  c2profile.lark  c2profile.py  c_c2.py  client.py  guardrails.py  pcap.py  pe.py  utils.py  version.py  xordecode.py
docs/: beacon-version-identification.rst  c2profile-grammar.rst  cobaltstrike-beacon-versions.csv  codespell-ignore-words.txt  conf.py  examples.rst  index.rst  installation.rst  requirements.txt
docs/_ext/: generate_beacon_version_csv.py
docs/scripts/: checksum8-accesslogs.rst  dump_beacon_keys.rst  example_client.rst  index.rst
docs/structures/: c2_def.rst  cs_def.rst  guardrails_def.rst  index.rst  pe_def.rst
docs/tools/: beacon-artifact.rst  beacon-client.rst  beacon-dump.rst  beacon-pcap.rst  beacon-xordecode.rst  c2profile-dump.rst
docs/tutorials/: decrypt_cobaltstrike_pcaps.rst  index.rst  minimal_beacon_client.rst
scripts/: artifact.py  checksum8-accesslogs.py  dump_beacon_keys.py  example_client.py
tests/: conftest.py  test_beacon.py  test_c2.py  test_c2profile.py  test_client.py  test_guardrails.py  test_pe.py  test_utils.py  test_version.py  test_xordecode.py
tests/beacons/: README.rst
